# KnowMat

./: .env.example  .env_example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  README_zh.md  environment.yml  pyproject.toml  requirements-cpu.txt  requirements-gpu.txt  requirements.txt  setup.cfg
.github/workflows/: ci.yml
20260409反馈/: Kumar_2018_evaluation.md
AYzJxq6ezHG1b1fw6lPm/: AYzJxq6ezHG1b1fw6lPm.json
AYzJxq6ezHG1b1fw6lPm/_ocr_cache/1231fc1d9ba23db60a002bdb/: cached_ocr_result.json
data/: .gitignore
data/raw/AYzJxq6ezHG1b1fw6lPm/: AYzJxq6ezHG1b1fw6lPm.md
docs/: env-audit-knowmat.md  env-knowmat-vs-knowmat2.md  ocr-cudnn64_9-fix.md  platforms.md
evaluation/: auto_score_extraction.py  scoring_report.json  scoring_report_current_abs.json  scoring_report_patched.json  scoring_report_patched2.json  scoring_summary.md  scoring_summary_current_abs.md  scoring_summary_patched.md  scoring_summary_patched2.md
evaluation/groundtruth/: 1-data.json  2-data.json  3-data.json  5-data.json  6-data.json  AYzJ5YexzHG1b1fwF_ul.json
evaluation/output/1-2024-MSEA-Ti₄₂Hf₂₁Nb₂₁V₁₆-DED/: 1-2024-MSEA-Ti₄₂Hf₂₁Nb₂₁V₁₆-DED_extraction.json  1-2024-MSEA-Ti₄₂Hf₂₁Nb₂₁V₁₆-DED_qa_report.json
evaluation/output/2-2025-Acta-Nb₁₅Ta₁₀W₇₅---添加NbC 纳米沉淀/: 2-2025-Acta-Nb₁₅Ta₁₀W₇₅---添加NbC 纳米沉淀_extraction.json  2-2025-Acta-Nb₁₅Ta₁₀W₇₅---添加NbC 纳米沉淀_qa_report.json
evaluation/output/3-2024-JMST- Co42Cr20Ni30Ti4Al4/: 3-2024-JMST- Co42Cr20Ni30Ti4Al4_extraction.json  3-2024-JMST- Co42Cr20Ni30Ti4Al4_qa_report.json
evaluation/output/4-2025-IJP-Ni₆₁.₃Cr₂₅.₃W₄.₄Mo₁.₄Fe₁.₇Co₁.₄Al₁.₁Mn₀.₄Si₀.₇C₂.₅La₀.₀₁₃/: 4-2025-IJP-Ni₆₁.₃Cr₂₅.₃W₄.₄Mo₁.₄Fe₁.₇Co₁.₄Al₁.₁Mn₀.₄Si₀.₇C₂.₅La₀.₀₁₃_extraction.json  4-2025-IJP-Ni₆₁.₃Cr₂₅.₃W₄.₄Mo₁.₄Fe₁.₇Co₁.₄Al₁.₁Mn₀.₄Si₀.₇C₂.₅La₀.₀₁₃_qa_report.json
evaluation/output/5-2024-IJP-在 FeCoCrNiMox/: 5-2024-IJP-在 FeCoCrNiMox_extraction.json  5-2024-IJP-在 FeCoCrNiMox_qa_report.json
evaluation/output/6-2024-MSEA- FeCoCrNiMo0.5/: 6-2024-MSEA- FeCoCrNiMo0.5_extraction.json  (+1 more)
prompts/: README.md  evaluation.yaml  extraction_system_template.txt  extraction_user_template.txt  flagging.yaml  subfield_detection.yaml  validator.yaml
qwen3.5/1-2024-MSEA-Ti₄₂Hf₂₁Nb₂₁V₁₆-DED/: 1-2024-MSEA-Ti₄₂Hf₂₁Nb₂₁V₁₆-DED_extraction.json  1-2024-MSEA-Ti₄₂Hf₂₁Nb₂₁V₁₆-DED_qa_report.json
qwen3.5/2-2025-Acta-Nb₁₅Ta₁₀W₇₅---添加NbC_纳米沉淀/: 2-2025-Acta-Nb₁₅Ta₁₀W₇₅---添加NbC_纳米沉淀_extraction.json  2-2025-Acta-Nb₁₅Ta₁₀W₇₅---添加NbC_纳米沉淀_qa_report.json
qwen3.5/3-2024-JMST-_Co42Cr20Ni30Ti4Al4/: 3-2024-JMST-_Co42Cr20Ni30Ti4Al4_extraction.json  3-2024-JMST-_Co42Cr20Ni30Ti4Al4_qa_report.json
qwen3.5/4-2025-IJP-Ni₆₁.₃Cr₂₅.₃W₄.₄Mo₁.₄Fe₁.₇Co₁.₄Al₁.₁Mn₀.₄Si₀.₇C₂.₅La₀.₀₁₃/: 4-2025-IJP-Ni₆₁.₃Cr₂₅.₃W₄.₄Mo₁.₄Fe₁.₇Co₁.₄Al₁.₁Mn₀.₄Si₀.₇C₂.₅La₀.₀₁₃_extraction.json  4-2025-IJP-Ni₆₁.₃Cr₂₅.₃W₄.₄Mo₁.₄Fe₁.₇Co₁.₄Al₁.₁Mn₀.₄Si₀.₇C₂.₅La₀.₀₁₃_qa_report.json
qwen3.5/5-2024-IJP-在_FeCoCrNiMox/: 5-2024-IJP-在_FeCoCrNiMox_extraction.json  5-2024-IJP-在_FeCoCrNiMox_qa_report.json
qwen3.5/6-2024-MSEA-_FeCoCrNiMo0.5/: 6-2024-MSEA-_FeCoCrNiMo0.5_analysis_report.txt  6-2024-MSEA-_FeCoCrNiMo0.5_extraction.json  6-2024-MSEA-_FeCoCrNiMo0.5_qa_report.json
scripts/: ocr_regression_report.py  setup_env.ps1  setup_env.sh  validate_prompts.py
src/knowmat/: __main__.py  app_config.py  config.py  domain_rules.py  domain_rules.yaml  env_loader.py  extractors.py  orchestrator.py  post_processing.py  prompt_generator.py  prompt_loader.py  schema_converter.py  states.py
src/knowmat/data/: __init__.py  (+1 more)
tests/: test_domain_rules.py  test_env_loader.py  test_schema_converter.py
tools/: redefine_comp.py  regression_diff.py
手工标注结果/: 4-data.json  Kumar_2018_THL_revised2343.json
(+133 files in other folders)
